# TL-Tool

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  aspects.bzl  jira_cache_updater.py  msr_jira.py  mypy.ini  one_jira_record.json  pyproject.toml  raw_issue_dict.py  requirements.in  requirements.txt  test_tlj.py  test_tlt.py  three_jira_record.json  tlj.py  two_jira_record.json
.ijwb/: .bazelproject
tests/: BUILD.bazel  test_jira_cache_updater.py  test_tlt.py
tlt/: BUILD.bazel  jira_cache_updater.py  raw_issue_dict.py  tlt.py
