load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_tlt",
    size = "small",
    srcs = ["test_tlt.py"],
    args = ["-vv"],
    main = "test_tlt.py",
    deps = [
        "//tlt",
        "@pypi//pytest",
    ],
)

py_test(
    name = "test_jira_cache_updater",
    size = "small",
    srcs = ["test_jira_cache_updater.py"],
    args = ["-vv"],
    main = "test_jira_cache_updater.py",
    deps = [
        "//tlt:jira_cache_updater",
        "@pypi//pytest",
    ],
)
