load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "tlt",
    srcs = ["tlt.py"],
    visibility = ["//tests:__subpackages__"],
    deps = [
        ":jira_cache_updater",
    ],
)

py_library(
    name = "jira_cache_updater",
    srcs = [
        "jira_cache_updater.py",
    ],
    visibility = ["//tests:__subpackages__"],
    deps = [
        ":raw_issue_dict",
        "@pypi//requests",
        "@pypi//requests_ratelimiter",
    ],
)

py_library(
    name = "raw_issue_dict",
    srcs = [
        "raw_issue_dict.py",
    ],
    visibility = ["//tests:__subpackages__"],
    deps = [
    ],
)
